--- a/task3/style.css
+++ b/task3/style.css
@@ -42,7 +42,7 @@
   margin-top: 23px;
 }
 .section2__img {
-  background-image: url(/img/round_diagram.png);
+  background-image: url(../task3/img/round_diagram.png);
   background-size: contain;
   width: 279px;
   height: 279px;
